unpackaged/main/default/objects/Relacion_Producto_Fraccionamiento__c/Relacion_Producto_Fraccionamiento__c.object-meta.xml
<CustomObject>
    <label>Fraccionamiento</label>
    <nameField>
        <label>Nombre de la Relacion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fraccionamientos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>