unpackaged/main/default/objects/Relacion_Producto_Fraccionamiento__c/fields/Fraccionamiento2__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento2__c</fullName>
    <formula>HYPERLINK(&quot;https://javer--preprod.sandbox.lightning.force.com/lightning/r/Relacion_Producto_Fraccionamiento__c/&quot;&amp; Id &amp; &quot;/view&quot;, Folio__c &amp; &quot; - &quot; &amp; Fraccionamiento__r.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraccionamiento</label>
    <type>Text</type>
</CustomField>