unpackaged/main/default/objects/Relacion_Producto_Fraccionamiento__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Fraccionamiento__c.Plaza_Filtro__c</field>
            <operation>contains</operation>
            <valueField>$Source.Plaza_Filtro__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipName>Relaci_n_Productos_Fraccionamientos</relationshipName>
    <type>Lookup</type>
</CustomField>