unpackaged/main/default/objects/Relacion_Producto_Fraccionamiento__c/fields/Plaza_Filtro__c.field-meta.xml
<CustomField>
    <fullName>Plaza_Filtro__c</fullName>
    <label>Plaza Filtro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Querétaro</fullName>
            </value>
            <value>
                <fullName>Nuevo León</fullName>
            </value>
            <value>
                <fullName>Estado de México</fullName>
            </value>
            <value>
                <fullName>Jalisco</fullName>
            </value>
            <value>
                <fullName>Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Distrito Federal</fullName>
            </value>
            <value>
                <fullName>San Luis Potosi</fullName>
            </value>
            <value>
                <fullName>Quintana Roo</fullName>
            </value>
            <value>
                <fullName>Guanajuato</fullName>
            </value>
            <value>
                <fullName>Tamaulipas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>