unpackaged/main/default/objects/Relacion_Producto_Fraccionamiento__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Relaci_n_Productos_Fraccionamientos</relationshipName>
    <type>Lookup</type>
</CustomField>