unpackaged/main/default/objects/Relacion_Producto_Fraccionamiento__c/fields/Producto_Numero_Filtro__c.field-meta.xml
<CustomField>
    <fullName>Producto_Numero_Filtro__c</fullName>
    <label>Producto Número Filtro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>