unpackaged/main/default/objects/Relacion_Producto_Fraccionamiento__c/fields/Relacion_Producto_Plaza_Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Relacion_Producto_Plaza_Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plaza Relacionada</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Producto__c</field>
            <operation>notEqual</operation>
            <valueField>Relacion_Producto_Plaza__c.Producto__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Relacion_Producto_Plaza__c</referenceTo>
    <relationshipName>Relacion_Productos_Fraccionamientos</relationshipName>
    <type>Lookup</type>
</CustomField>