unpackaged/main/default/objects/Relacion_Producto_Fraccionamiento__c/fields/Sin_vigencia__c.field-meta.xml
<CustomField>
    <fullName>Sin_vigencia__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sin vigencia</label>
    <type>Checkbox</type>
</CustomField>