unpackaged/main/default/objects/Relacion_Producto_Fraccionamiento__c/fields/Vencido__c.field-meta.xml
<CustomField>
    <fullName>Vencido__c</fullName>
    <formula>IF(Vigencia_Hasta__c  &lt; TODAY(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencido</label>
    <type>Checkbox</type>
</CustomField>