unpackaged/main/default/objects/Relacion_Producto_Fraccionamiento__c/validationRules/Restriccion_producto.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriccion_producto</fullName>
    <active>false</active>
    <errorConditionFormula>IF( Producto__r.Name !=  Relacion_Producto_Plaza_Fraccionamiento__r.Producto__r.Name , true, false)</errorConditionFormula>
    <errorMessage>El registro de Plaza Relacionada, no corresponde al producto que estás modificando</errorMessage>
</ValidationRule>