unpackaged/main/default/objects/Relacion_Producto_Fraccionamiento__c/listViews/AEC_Relacion_Producto_Fraccionamiento.listView-meta.xml
<ListView>
    <fullName>AEC_Relacion_Producto_Fraccionamiento</fullName>
    <filterScope>Queue</filterScope>
    <label>AEC</label>
    <queue>AEC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>